# CS50

./: CMakeLists.txt  README.md  main.c
pset1/credit/: credit.c
pset1/hello/: hello.c
pset1/mario/: mario.c
pset2/readability/: readabilty.c
pset2/substitution/: substitution.c
pset3/plurality/: plurality.c
pset3/tideman/: tideman.c
pset4/filter/: helpers.c
pset4/recover/: recover.c
pset5/speller/: dictionary.c
pset6/credit/: credit.py
pset6/dna/: dna integration test.py  dna.py
pset6/hello/: hello.py
pset6/mario/more/: mario.py
pset6/readability/: readability.py
pset7/fiftyville/: fiftyville.sql
pset7/movies/: 10.sql  11.sql  12.sql  13.sql  2.sql  6.sql  7.sql  8.sql  9.sql
