cmake_minimum_required(VERSION 3.17)
project(CS50bis C)

set(CMAKE_C_STANDARD 11)

add_executable(CS50bis main.c)
add_executable(hello pset1/hello/hello.c)
#add_executable(pset1/credit/credit.c)
#add_executable(pset1/mario/mario.c)
#add_executable(pset2/substitution/substitution.c)
#add_executable(pset2/readability/readabilty.c)
#add_executable(pset3/plurality/plurality.c)
#add_executable(pset3/tideman/tideman.c)
#add_executable(pset4/filter/filter.c)
#add_executable(pset4/filter/helpers.c)
#add_executable(pset4/recover/recover.c)